Not working for now

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -235,13 +235,13 @@ border-color: #e87d7d;
         <a href="https://discords.com/servers/karu" class="btn sl">Server List</a>
       {% endif %}
     </header>    
-    <div align="center">
+    <!--<div align="center">
 <img src="https://discordbots.org/api/widget/status/413909677252935680.svg?noavatar=true" alt="Karu">
     
 <img src="https://discordbots.org/api/widget/servers/413909677252935680.svg?noavatar=true" alt="Karu">
 
 <img src="https://discordbots.org/api/widget/upvotes/413909677252935680.svg?noavatar=true" alt="Karu">
-</div>
+</div>-->
 
     <main id="content" class="main-content" role="main">
       {{ content }}
