--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -231,7 +231,7 @@ border-color: #e87d7d;
         <a href="./" class="btn">Home</a>
         <a href="./history.html" class="btn">History</a>
         <a href="https://github.com/BulzyKrown/Karu/wiki" class="btn">Wiki</a>
-        <a href="https://discord.com/oauth2/authorize?client_id=413909677252935680&permissions=321600&redirect_uri=https%3A%2F%2Fdiscord.gg%2FSYYBU2F&response_type=code&scope=bot" class="btn">Invite</a>
+        <a href="https://discord.com/api/oauth2/authorize?client_id=413909677252935680&permissions=137439266912&redirect_uri=https%3A%2F%2Fkaru.bulzyland.xyz&response_type=code&scope=bot%20applications.commands%20connections" class="btn">Invite</a>
         <a href="https://discords.com/servers/karu" class="btn sl">Server List</a>
       {% endif %}
     </header>    
